Thu Feb 13 23:30:30 2014  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): should check ci->me->flag of
	  a refining method in case the method is private.
	  [ruby-core:60111] [Bug #9452]

	* vm_method.c (make_method_entry_refined): set me->flag of a refined
	  method entry to NOEX_PUBLIC in case the original method is private
	  and it is refined as a public method.  The original flag is stored
	  in me->def->body.orig_me, so it's OK to make a refined method
	  entry public.  [ruby-core:60111] [Bug #9452]

	* test/ruby/test_refinement.rb: related tests.

Thu Feb 13 18:38:15 2014  Eric Wong  <e@80x24.org>

	* re.c (rb_reg_raise): remove volatile
	  Unnecessary since r41597

Thu Feb 13 18:28:51 2014  Eric Wong  <e@80x24.org>

	* re.c (rb_reg_regcomp): remove volatile
	  Unnecessary since r13261

Thu Feb 13 16:54:32 2014  Zachary Scott  <e@zzak.io>

	* test/ruby/test_array.rb: Ensure flatten! is used for test_flatten
	  Patch by @ksss [Fixes GH-530] https://github.com/ruby/ruby/pull/530

Thu Feb 13 15:43:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (IDSET_ATTRSET_FOR_INTERN): fix off-by-one bug.

	* parse.y (rb_enc_symname_type): junk ID succeeded by '=' is also
	  attrset ID.  [ruby-core:60668] [Bug #8756]

Thu Feb 13 11:06:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if pthread_setname_np is available.

	* thread_pthread.c: pthread_setname_np is not available on old
	  Darwins.  [ruby-core:60524] [Bug #9492]

Thu Feb 13 00:56:59 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: revert r44922. I should have used AC_CHECK_FUNCS()
	  to just define a symbol if the function is available.

Thu Feb 13 00:20:58 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: use AC_CHECK_FUNC instead of AC_CHECK_FUNCS
	  if available.

Thu Feb 13 00:15:10 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: fix to undefine HAVE_MEMMEM correctly if it is broken.
